--- a/src/.env
+++ b/src/.env
@@ -1,5 +1,10 @@
-db_host=127.0.0.1
+host=127.0.0.1
+
+api_port=3000
+
 db_port=8080
 db_name=joeydb
 db_user=joey
 db_password=your_password_here
+
+
